# pigeoneye

./: .gitignore  LICENSE  README.ko.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
Casks/: peye.rb  pigeoneye.rb
scripts/: smoke.mjs  update-cask.py
src/: App.css  App.tsx  StatusView.tsx  TerminalPanel.tsx  YamlEditor.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: k8s.rs  lib.rs  main.rs
